Bug 692537 - Regression: wrong colors in tiff32nc output
Summary: Regression: wrong colors in tiff32nc output
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC All
: P2 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-23 15:24 UTC by Marcos H. Woehrmann
Modified: 2011-10-02 01:36 UTC (History)
0 users

See Also:
Customer: 330
Word Size: ---


Attachments
bug_692537_simple2.pdf (20.97 KB, application/pdf)
2011-09-25 06:30 UTC, Michael Vrhel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-09-23 15:24:46 UTC
The customer reports and I've verified that the attached PDF file is rendered with the wrong colors when converted with Ghoscript head (2946424).  Ghostscript 8.54 renders the file correctly; I'm searching for the exact commit responsible for the regression.

The command line I'm using for testing:

  bin/gs -sDEVICE=tiff32nc -o test.tif ./26201.pdf
Comment 2 Marcos H. Woehrmann 2011-09-23 19:12:07 UTC
This is indeed a regression, it started failing with:

commit 600b448f5abeaf5e988381462f0b7ce929377298
Author: Michael Vrhel <michael.vrhel@artifex.com>
Date:   Wed Jan 7 17:36:55 2009 +0000

    Fix for overprinting with transparency.  This fixes bugs related to the lack of overprint support when there is transparency present in the file.
Comment 3 Michael Vrhel 2011-09-24 06:27:36 UTC
Thanks for finding the regression point.  I will dig into this.
Comment 4 Michael Vrhel 2011-09-25 06:30:26 UTC
Created attachment 7927 [details]
bug_692537_simple2.pdf

Simplified file.
Comment 5 Michael Vrhel 2011-09-25 06:36:02 UTC
The simplified file suffers from the same issue that the customer's file does when run with -dNOTRANSPARENCY,  which is that there are Cyan lines running in the shading (in the presence of transparency we end up with the region where there the cyan lines occur all being cyan).  The issue occurs with and without clist rendering.  Looking into the contents of the simplified file, I suspect there is a DeviceN color issue.  This has a type 2 shading in a Cyan Yellow and Black color space.  Will dig more into this during the week.  Now that I have a simplified file, I am hopeful to have this resolved soon.
Comment 6 Michael Vrhel 2011-09-26 18:18:11 UTC
This appears to be an overprint issue making things a bit more complex, but I am making progress.