Fix for bug 692537

Need to make sure that the color mapping information (what colorants are supported and what
their index is) is updated in gx_set_overprint_DeviceN before setting up the overprint information.